[gd_scene load_steps=4 format=3 uid="uid://b8slmv7dd315i"]

[ext_resource type="Script" uid="uid://d87a67ur8n47" path="res://UI/waiting_room.gd" id="1_gglqs"]
[ext_resource type="Texture2D" uid="uid://bkm6mum4eprwu" path="res://Theme/Gradient.tres" id="1_imj8n"]
[ext_resource type="Script" uid="uid://hbp220v5ajsq" path="res://Comms/InitiateConnection.gd" id="1_mdb3x"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gglqs")

[node name="TextureRect2" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 540.0
texture = ExtResource("1_imj8n")

[node name="MessageSender" type="Node" parent="."]
script = ExtResource("1_mdb3x")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1153.0
offset_bottom = 650.0

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 27.0
offset_top = 37.0
offset_right = 944.0
offset_bottom = 525.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "This is a game about communication. Once you proceed, you should not talk to your partner except for through the means provided by the game, unless you get really stuck and need a hint. "

[node name="BackButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 451.0
offset_right = 139.0
offset_bottom = 515.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_imj8n")
ignore_texture_size = true
stretch_mode = 0

[node name="ButtonLabel2" type="RichTextLabel" parent="BackButton"]
layout_mode = 0
offset_left = 1.0
offset_top = 7.0
offset_right = 88.0
offset_bottom = 73.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Back"

[node name="proceedButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 215.0
offset_top = 347.0
offset_right = 279.0
offset_bottom = 411.0
scale = Vector2(8, 1)
mouse_default_cursor_shape = 2
texture_normal = ExtResource("1_imj8n")

[node name="ButtonLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 236.0
offset_top = 352.0
offset_right = 741.0
offset_bottom = 418.0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 36
bbcode_enabled = true
text = "Waiting for partner to join"

[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="proceedButton" to="." method="_on_proceed_button_pressed"]
